[project]
name = "langchain-claude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.124.0",
    "langchain>=1.0,<2.0",
    "langchain-anthropic>=1.2.0",
    "langchain-openai>=1.1.1",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "python-dotenv>=1.2.1",
    "twilio>=9.8.8",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
